--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div>
           <img
             class="img"
-            src="/images/bergen2.jpg"
+            src="images/bergen2.jpg"
             alt="Bergen seen from above"
           />
           <p class="activity-txt">
@@ -40,7 +40,7 @@
           <p class="smallr">Remember to bring good shoes!</p>
         </div>
         <div>
-          <img class="img" src="/images/Wesselengens1.jpg" alt="Buekorps" />
+          <img class="img" src="images/Wesselengens1.jpg" alt="Buekorps" />
           <p class="activity-txt">
             Enjoy the sounds of the drums of one of Bergens old traditional
             Buekorps!
@@ -54,7 +54,7 @@
         <div>
           <img
             class="img"
-            src="/images/Rain2.png"
+            src="images/Rain2.png"
             alt="Average Bergen rain intensity"
           />
           <p class="activity-txt">Or simply enjoy the rain!</p>
@@ -70,7 +70,7 @@
       <div class="guide">
         <img
           class="img"
-          src="/images/Man Silhouette.png"
+          src="images/Man Silhouette.png"
           alt="Your Guide staring blankly"
         />
         <div class="guide-cont">
@@ -88,7 +88,7 @@
       </div>
       <img
         id="crest"
-        src="/images/Bergen+kommunevåpen.png"
+        src="images/Bergen+kommunevåpen.png"
         alt="Bergen Kommune Crest"
       />
     </div>
